add: img project-tile cover

--- a/personalPortfolio/css/_main_styles.sass
+++ b/personalPortfolio/css/_main_styles.sass
@@ -10,6 +10,7 @@ html
 body
     font-family: $body-font-family
     font-weight: $body-font-weight
+    scroll-behavior: $scroll-behavior
 
 li, p, pre
         line-height: $line-height
