--- a/personalPortfolio/css/challenge/_main_styles.sass
+++ b/personalPortfolio/css/challenge/_main_styles.sass
@@ -50,10 +50,22 @@ section#welcome-section
 
 .project-gallery
     display: grid
-    grid-template-columns: 1fr 1fr 1fr
-    grid-template-rows: auto auto
+    grid-template-columns: 100%
+    grid-template-rows: auto
     grid-gap: 1em
 
-@media (max-width: map-get($media-breakpoints-sizes, md))
+@media (min-width: map-get($media-breakpoints-sizes, sm))
     .project-gallery
-        grid-template-columns: 100%
+        grid-template-columns: repeat(1, 1fr)
+
+@media (min-width: map-get($media-breakpoints-sizes, md))
+    .project-gallery
+        grid-template-columns: repeat(2, 1fr)
+
+@media (min-width: map-get($media-breakpoints-sizes, lg))
+    .project-gallery
+        grid-template-columns: repeat(3, 1fr)
+
+@media (min-width: map-get($media-breakpoints-sizes, xl))
+    .project-gallery
+        grid-template-columns: repeat(4, 1fr)
