--- a/personalPortfolio/css/challenge/_tile.sass
+++ b/personalPortfolio/css/challenge/_tile.sass
@@ -1,6 +1,8 @@
 $tile-height: 30em
 $tile-width: 100%
-$tile-footer-height: $tile-height * 0.3
+
+$tile-figure-height: $tile-height * 0.6
+$tile-footer-height: $tile-height * 0.2
 
 $button-font-size: map-get($goldens-map, golden16)
 $button-padding: 1em
@@ -22,7 +24,7 @@ $padding: 1rem
     a
         order: 1
         figure
-            max-height: $tile-height * 0.6666
+            max-height: $tile-figure-height
             overflow: hidden
     h4
         order: 2
@@ -42,5 +44,52 @@ $padding: 1rem
 
 .tile footer
     position: absolute
+    width: 100%
+    height: $tile-footer-height
+    background: inherit
     bottom: 0
-    padding: $padding
+    left: 0
+    color: white
+    z-index: 1
+    &:before
+        @extend %basic-before
+        box-shadow: 0 0 20px black
+
+.tile-actions 
+    @extend %vertical-center
+    width: 100%
+    height: 100%
+    .tile-action
+        padding: $padding
+        border-radius: 50%
+        margin-left: $padding
+        cursor: pointer
+        &:before
+            font-weight: bolder
+
+.tile-action-expand:hover:before,
+.tile-action-expand:focus:before
+    animation: 1s ease expand infinite
+
+.tile-action-open:hover:before,
+.tile-action-open:focus:before
+    animation: 1s ease open infinite
+
+.tile-action-expand.activated
+    transform: rotate(180deg)
+
+@keyframes expand
+    0%
+        transform: translateY(0)
+    50%
+        transform: translateY(-1em)
+    100%
+        transform: translateY(0)
+
+@keyframes open
+    0%
+        transform: scale(1.0)
+    50%
+        transform: scale(1.2)
+    100%
+        transform: scale(1.0)
