--- a/personalPortfolio/css/index.css
+++ b/personalPortfolio/css/index.css
@@ -177,7 +177,7 @@ hr {
   border-style: solid;
 }
 
-a.button, a.button:before, #nav-menu-opener, .icon, nav {
+a.button, a.button:before, #nav-menu-opener, .icon, nav, .tile-actions {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -207,6 +207,14 @@ a.button, a.button:before, #nav-menu-opener, .icon {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+}
+
+.tile footer:before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
 }
 
 @media screen and (min-width: 0px) {
@@ -2109,7 +2117,7 @@ section#welcome-section *:not(.svg-background) {
 }
 
 .tile header a figure {
-  max-height: 19.998em;
+  max-height: 18em;
   overflow: hidden;
 }
 
@@ -2136,8 +2144,111 @@ section#welcome-section *:not(.svg-background) {
 
 .tile footer {
   position: absolute;
+  width: 100%;
+  height: 6em;
+  background: inherit;
   bottom: 0;
+  left: 0;
+  color: white;
+  z-index: 1;
+}
+
+.tile footer:before {
+  -webkit-box-shadow: 0 0 20px black;
+          box-shadow: 0 0 20px black;
+}
+
+.tile-actions {
+  width: 100%;
+  height: 100%;
+}
+
+.tile-actions .tile-action {
   padding: 1rem;
+  border-radius: 50%;
+  margin-left: 1rem;
+  cursor: pointer;
+}
+
+.tile-actions .tile-action:before {
+  font-weight: bolder;
+}
+
+.tile-action-expand:hover:before,
+.tile-action-expand:focus:before {
+  -webkit-animation: 1s ease expand infinite;
+          animation: 1s ease expand infinite;
+}
+
+.tile-action-open:hover:before,
+.tile-action-open:focus:before {
+  -webkit-animation: 1s ease open infinite;
+          animation: 1s ease open infinite;
+}
+
+.tile-action-expand.activated {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+@-webkit-keyframes expand {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(-1em);
+            transform: translateY(-1em);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes expand {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(-1em);
+            transform: translateY(-1em);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes open {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes open {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 
 @media print {
