--- a/personalPortfolio/css/index.css
+++ b/personalPortfolio/css/index.css
@@ -131,6 +131,7 @@ h6 {
 
 html {
   font-size: 1rem;
+  scroll-behavior: smooth;
 }
 
 @media (min-width: 1920px) {
@@ -142,7 +143,6 @@ html {
 body {
   font-family: "Quicksand", sans-serif;
   font-weight: normal;
-  scroll-behavior: smooth;
 }
 
 li, p, pre {
@@ -177,7 +177,7 @@ hr {
   border-style: solid;
 }
 
-a.button, a.button:before, #nav-menu-opener, .icon, nav, .tile-actions {
+a.button, a.button:before, #nav-menu-opener, .icon, .tile.image footer .tile-actions, nav, .tile-actions {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -186,7 +186,7 @@ a.button, a.button:before, #nav-menu-opener, .icon, nav, .tile-actions {
           align-items: center;
 }
 
-a.button, a.button:before, #nav-menu-opener, .icon {
+a.button, a.button:before, #nav-menu-opener, .icon, .tile.image footer .tile-actions {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2096,8 +2096,59 @@ section#welcome-section *:not(.svg-background) {
 .tile {
   width: 100%;
   height: 30em;
+  min-height: 30em;
   position: relative;
   overflow: hidden;
+}
+
+.tile.rounded {
+  border-radius: 1em;
+}
+
+.tile.minimalist {
+  border: 0.25em solid currentColor;
+}
+
+.tile.figure figure {
+  padding: 1rem;
+}
+
+.tile.image a {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.tile.image header {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.tile.image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.tile.image:hover img {
+  -webkit-filter: blur(1em);
+          filter: blur(1em);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.tile.image.titled h4 {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+  left: 0;
+  top: 0;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  padding: 1rem;
 }
 
 .tile header {
@@ -2117,7 +2168,7 @@ section#welcome-section *:not(.svg-background) {
 }
 
 .tile header a figure {
-  max-height: 18em;
+  max-height: 15em;
   overflow: hidden;
 }
 
@@ -2126,6 +2177,7 @@ section#welcome-section *:not(.svg-background) {
       -ms-flex-order: 2;
           order: 2;
   padding: 1rem;
+  padding-bottom: 0;
 }
 
 .tile .tile-description {
@@ -2145,17 +2197,26 @@ section#welcome-section *:not(.svg-background) {
 .tile footer {
   position: absolute;
   width: 100%;
-  height: 6em;
+  height: 4.5em;
   background: inherit;
   bottom: 0;
   left: 0;
-  color: white;
   z-index: 1;
 }
 
 .tile footer:before {
-  -webkit-box-shadow: 0 0 20px black;
-          box-shadow: 0 0 20px black;
+  -webkit-box-shadow: 0 0 2em -0.5em currentColor;
+          box-shadow: 0 0 2em -0.5em currentColor;
+}
+
+.tile.image footer {
+  opacity: 0;
+  height: 100%;
+  background: transparent;
+}
+
+.tile.image:hover footer {
+  opacity: 1;
 }
 
 .tile-actions {
