--- a/personalPortfolio/css/_text_align.sass
+++ b/personalPortfolio/css/_text_align.sass
@@ -5,4 +5,4 @@ $display-flex: (align-items: (baseline, center, flex-start, flex-end, stretch), 
         @each $flex-property, $flex-property-values in $display-flex
             @each $value in $flex-property-values
                 .#{$breakpoint-key}-#{$flex-property}-#{$value}
-                    #{$flex-property}: $value
+                    #{$flex-property}: $value!important
