--- a/personalPortfolio/css/_form.sass
+++ b/personalPortfolio/css/_form.sass
@@ -8,7 +8,7 @@
 
 $input-height: 4em
 
-form
+form#contact
     background-image: url('../img/projects/gab.png')
     & *
         outline: none
@@ -40,7 +40,7 @@ form
             border-radius: $input-height / 2
             border: 0.25em solid transparent
             box-shadow: 0 0 0.25em currentColor
-            &:focus, &:hover
+            &:focus
                 box-shadow: 0 0 0 transparent
                 border: 0.25em solid currentColor
         textarea
