--- a/personalPortfolio/css/_checkbox.sass
+++ b/personalPortfolio/css/_checkbox.sass
@@ -1,16 +1,90 @@
-.custom_checkbox
-    width: auto
-    height: auto
-    position: relative
-    z-index: 0
-    padding: 1em
-    &:after
-        content: ''
-        background: inherit
-        width: 100%
-        height: 100%
-        position: absolute
+// @supports (-ms-accelerator: false)
+// .checkbox
+//     position: relative
+//     width: 100%
+//     height: 100%
+//     // background: yellow
+//     @extend %centralize-all
+//     & *
+//         cursor: pointer
+//     label
+//         opacity: 0
+//     input
+//         @extend %centralize-all 
+//         // opacity: 0
+//         width: 1% 
+//         height: 1%
+//         padding: 0
+//         margin: 0
+//         &:before
+//             @extend %basic-before
+//             background: blue
+//             z-index: 1
+//             height: 40%
+//             left: 0
+//         &:after
+//             @extend %basic-after
+//             background: white
+//             z-index: 1
+//             width: 1em
+//             top: 0
+//         &:not(:checked):after
+//             left: 0
+//         &:checked:after
+//             right: 0
+
+%max_it
+    width: 100%
+    height: 100%
+
+%min_it
+    width: 1px
+    height: 1px  
+
+%sob
+    position: absolute
+    top: 0
+    left: 0
+
+
+.switch
+    @extend %centralize-all
+    // .background
+    //     background: white
+    //     height: 40%
+    //     top: auto
+    .pin
+        background: currentColor
+        width: 20%
         left: 0
-        top: 0
-        z-index: -1
-        border-radius: 0.25em
+
+.custom_checkbox
+    border-radius: 1em
+    width: 4em
+    height: 2em
+    position: relative
+    & *
+        cursor: pointer
+    label span, input
+        opacity: 0
+    & > input
+        @extend %max_it
+    input
+        z-index: 1
+        margin: 0
+    input, .switch, .pin, .background
+        @extend %max_it
+        @extend %sob
+    input:checked + .switch .pin
+        right: 0
+        left: auto
+
+.custom_checkbox
+    label span
+        @extend %min_it
+    label i
+        @extend %centralize-all
+        @extend %max_it
+        
+
+
