--- a/personalPortfolio/css/_main_styles.sass
+++ b/personalPortfolio/css/_main_styles.sass
@@ -5,7 +5,7 @@
 html
     font-size: $html-font-size
     scroll-behavior: $scroll-behavior
-    @media (min-width: map-get($media-breakpoints-sizes, xl))
+    @media (min-width: map-get($breakpoints-sizes, xl))
         font-size: $html-font-size * 2
 
 body
