--- a/personalPortfolio/css/_nav.sass
+++ b/personalPortfolio/css/_nav.sass
@@ -41,7 +41,7 @@ nav
     span
         display: none
 
-@media (max-width: map-get($media-breakpoints-sizes, md))
+@media (max-width: map-get($breakpoints-sizes, md))
     #nav-menu
         flex-direction: column!important
         align-items: flex-end!important
