--- a/technicalDocumentationPage/css/_col_sizes.sass
+++ b/technicalDocumentationPage/css/_col_sizes.sass
@@ -1,7 +1,7 @@
 $total_columns: 12
 $column_percentage: 100% / $total_columns // 8.3333% for a 12 grid (100/12)
 
-@each $breakpoint_key, $size_in_px in $media_breakpoints_sizes
+@each $breakpoint_key, $size_in_px in $breakpoints-sizes
     @media screen and (min-width: $size_in_px)
         @for $number_of_columns from 1 through $total_columns
             .col-#{$breakpoint_key}#{$number_of_columns}
