--- a/technicalDocumentationPage/css/_layout.sass
+++ b/technicalDocumentationPage/css/_layout.sass
@@ -12,7 +12,7 @@ body
 #footer
     grid-area: footer
 
-@media (max-width: (map-get($media-breakpoints-sizes, md)))
+@media (max-width: (map-get($breakpoints-sizes, md)))
     body
         grid-template-columns: 100%
         grid-template-rows: auto
@@ -28,7 +28,7 @@ body
 
 
 
-@media (min-width: (map-get($media-breakpoints-sizes, md)))
+@media (min-width: (map-get($breakpoints-sizes, md)))
     body
         grid-template-areas: "nav main" "nav main" "footer footer"
     
@@ -50,7 +50,7 @@ body
     #nav_opener
         display: none
 
-// @media (min-width: (map-get($media-breakpoints-sizes, md)))
+// @media (min-width: (map-get($breakpoints-sizes, md)))
 //     body
 //         grid-template-columns: 1fr 3fr
 //         grid-template-rows: auto auto
