add: contact_art and changes some propreties of custom_checkbox

--- a/personalPortfolio/css/challenge/_main_styles.sass
+++ b/personalPortfolio/css/challenge/_main_styles.sass
@@ -54,6 +54,14 @@ section#welcome-section
     grid-template-rows: auto
     grid-gap: 1em
 
+#contact-art
+    background-image: url('../img/grito.svg')
+    background-repeat: no-repeat
+    background-position: top center
+
+footer#footer
+    min-height: 20vh
+
 @media (min-width: map-get($breakpoints-sizes, sm))
     .project-gallery
         grid-template-columns: repeat(1, 1fr)
