--- a/personalPortfolio/css/_checkbox.sass
+++ b/personalPortfolio/css/_checkbox.sass
@@ -1,38 +1,3 @@
-// @supports (-ms-accelerator: false)
-// .checkbox
-//     position: relative
-//     width: 100%
-//     height: 100%
-//     // background: yellow
-//     @extend %centralize-all
-//     & *
-//         cursor: pointer
-//     label
-//         opacity: 0
-//     input
-//         @extend %centralize-all 
-//         // opacity: 0
-//         width: 1% 
-//         height: 1%
-//         padding: 0
-//         margin: 0
-//         &:before
-//             @extend %basic-before
-//             background: blue
-//             z-index: 1
-//             height: 40%
-//             left: 0
-//         &:after
-//             @extend %basic-after
-//             background: white
-//             z-index: 1
-//             width: 1em
-//             top: 0
-//         &:not(:checked):after
-//             left: 0
-//         &:checked:after
-//             right: 0
-
 %max_it
     width: 100%
     height: 100%
@@ -41,30 +6,28 @@
     width: 1px
     height: 1px  
 
-%sob
+%super_absolute
     position: absolute
     top: 0
     left: 0
 
-
 .switch
     @extend %centralize-all
-    // .background
-    //     background: white
-    //     height: 40%
-    //     top: auto
     .pin
         background: currentColor
         width: 20%
         left: 0
+        display: none
 
 .custom_checkbox
     border-radius: 1em
     width: 4em
     height: 2em
     position: relative
+    font-size: 1.2em
     & *
         cursor: pointer
+        transition: background 0.5s linear, color 0.5s linear!important
     label span, input
         opacity: 0
     & > input
@@ -74,7 +37,7 @@
         margin: 0
     input, .switch, .pin, .background
         @extend %max_it
-        @extend %sob
+        @extend %super_absolute
     input:checked + .switch .pin
         right: 0
         left: auto
