--- a/personalPortfolio/css/_placeholders.sass
+++ b/personalPortfolio/css/_placeholders.sass
@@ -32,3 +32,16 @@
 %basic-after
     &:after
         @extend %basic-content-null
+
+%max_it
+    width: 100%
+    height: 100%
+
+%min_it
+    width: 1px
+    height: 1px  
+
+%super_absolute
+    position: absolute
+    top: 0
+    left: 0
